add response templates
